# fast-rag-mcp

./: .env.example  .gitignore  CHANGELOG.md  PRODUCTION_AUDIT.md  README.md  pyproject.toml
configs/: claude-code-add-mac-metal.sh  claude-code-add.sh  claude-project.m3pro-36gb.json  claude-project.m3pro-36gb.write-enabled.json  claude-project.mac-metal.lazy.json  m3pro-36gb-balanced.env  m3pro-36gb-turbo.env  mcp.project.example.json  opencode.jsonc  opencode.m3pro-36gb.jsonc  opencode.mac-metal.jsonc
scripts/: benchmark-control-plane.py  install-cuda-faiss-conda.sh  smoke-test.sh  verify-release.sh
src/blazing_rag_mcp/: __init__.py  application.py  chunking.py  cli.py  code_index.py  config.py  embeddings.py  indexer.py  io.py  locking.py  pdf_ingest.py  retrieval.py  runtime.py  server.py  store.py  types.py  vector.py
tests/: test_basic.py  test_pdf.py  test_production.py  test_server_lazy.py
workflows/: ci.yml
