[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "blazing-rag-mcp"
version = "1.1.0"
description = "Production local code and PDF documentation RAG MCP server with lazy MPS/CUDA acceleration"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
authors = [{ name = "Konstantin" }]
dependencies = [
  "mcp[cli]>=1.12.0,<2",
  "numpy>=1.26,<3",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "orjson>=3.10,<4",
  "cachetools>=5.3,<8",
  "typing-extensions>=4.12,<5",
]

[project.optional-dependencies]
embeddings = [
  "torch>=2.3,<3",
  "sentence-transformers==3.4.1",
  "transformers==4.47.1",
  "tokenizers==0.21.4",
  "huggingface-hub>=0.24,<1",
  "einops>=0.8,<1",
]
documents = ["pymupdf>=1.26.7,<2"]
faiss-cpu = ["faiss-cpu>=1.8,<2"]
code = [
  "tree-sitter>=0.22,<0.26",
  "tree-sitter-language-pack==0.7.2",
]
gpu = [
  "torch>=2.3,<3",
  "sentence-transformers==3.4.1",
  "transformers==4.47.1",
  "tokenizers==0.21.4",
  "huggingface-hub>=0.24,<1",
  "einops>=0.8,<1",
]
mac-metal = [
  "torch>=2.3,<3",
  "sentence-transformers==3.4.1",
  "transformers==4.47.1",
  "tokenizers==0.21.4",
  "huggingface-hub>=0.24,<1",
  "einops>=0.8,<1",
]
all = [
  "torch>=2.3,<3",
  "sentence-transformers==3.4.1",
  "transformers==4.47.1",
  "tokenizers==0.21.4",
  "huggingface-hub>=0.24,<1",
  "einops>=0.8,<1",
  "faiss-cpu>=1.8,<2",
  "tree-sitter>=0.22,<0.26",
  "tree-sitter-language-pack==0.7.2",
  "pymupdf>=1.26.7,<2",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "bandit>=1.7",
]

[project.scripts]
brag = "blazing_rag_mcp.cli:main"
brag-mcp = "blazing_rag_mcp.server:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
